--- a/src/app/tabela/tabela.component.html
+++ b/src/app/tabela/tabela.component.html
@@ -1,5 +1,5 @@
-<div class="grupos" *ngFor="let grupo of grupos; index as i">
-    <h3>Grupo {{grupo}}</h3>
+<div class="grupos">
+    <h3>Grupo A</h3>
     <table class="table">
         <thead>
             <tr>
@@ -14,8 +14,232 @@
                 <th scope="col">SG</th>
             </tr>
         </thead>
-        <tbody *ngIf="retornaSelecoes(grupo)">
-            <tr *ngFor="let selecao of selecoesDoGrupo; index as i">
+        <tbody *ngIf="grupoA">
+            <tr *ngFor="let selecao of grupoA; index as i">
+                    <th>{{selecao.nome}}</th>
+                    <th>{{selecao.pontos}}</th>
+                    <th>{{selecao.partidas}}</th>
+                    <th>{{selecao.vitorias}}</th>
+                    <th>{{selecao.empates}}</th>
+                    <th>{{selecao.derrotas}}</th>
+                    <th>{{selecao.golspro}}</th>
+                    <th>{{selecao.golscontra}}</th>
+                    <th>{{selecao.saldogols}}</th>
+                </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="grupos">
+    <h3>Grupo B</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Seleção</th>
+                <th scope="col">Pts</th>
+                <th scope="col">PJ</th>
+                <th scope="col">V</th>
+                <th scope="col">E</th>
+                <th scope="col">D</th>
+                <th scope="col">GP</th>
+                <th scope="col">GC</th>
+                <th scope="col">SG</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="grupoB">
+            <tr *ngFor="let selecao of grupoB; index as i">
+                    <th>{{selecao.nome}}</th>
+                    <th>{{selecao.pontos}}</th>
+                    <th>{{selecao.partidas}}</th>
+                    <th>{{selecao.vitorias}}</th>
+                    <th>{{selecao.empates}}</th>
+                    <th>{{selecao.derrotas}}</th>
+                    <th>{{selecao.golspro}}</th>
+                    <th>{{selecao.golscontra}}</th>
+                    <th>{{selecao.saldogols}}</th>
+                </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="grupos">
+    <h3>Grupo C</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Seleção</th>
+                <th scope="col">Pts</th>
+                <th scope="col">PJ</th>
+                <th scope="col">V</th>
+                <th scope="col">E</th>
+                <th scope="col">D</th>
+                <th scope="col">GP</th>
+                <th scope="col">GC</th>
+                <th scope="col">SG</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="grupoC">
+            <tr *ngFor="let selecao of grupoC; index as i">
+                    <th>{{selecao.nome}}</th>
+                    <th>{{selecao.pontos}}</th>
+                    <th>{{selecao.partidas}}</th>
+                    <th>{{selecao.vitorias}}</th>
+                    <th>{{selecao.empates}}</th>
+                    <th>{{selecao.derrotas}}</th>
+                    <th>{{selecao.golspro}}</th>
+                    <th>{{selecao.golscontra}}</th>
+                    <th>{{selecao.saldogols}}</th>
+                </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="grupos">
+    <h3>Grupo D</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Seleção</th>
+                <th scope="col">Pts</th>
+                <th scope="col">PJ</th>
+                <th scope="col">V</th>
+                <th scope="col">E</th>
+                <th scope="col">D</th>
+                <th scope="col">GP</th>
+                <th scope="col">GC</th>
+                <th scope="col">SG</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="grupoD">
+            <tr *ngFor="let selecao of grupoD; index as i">
+                    <th>{{selecao.nome}}</th>
+                    <th>{{selecao.pontos}}</th>
+                    <th>{{selecao.partidas}}</th>
+                    <th>{{selecao.vitorias}}</th>
+                    <th>{{selecao.empates}}</th>
+                    <th>{{selecao.derrotas}}</th>
+                    <th>{{selecao.golspro}}</th>
+                    <th>{{selecao.golscontra}}</th>
+                    <th>{{selecao.saldogols}}</th>
+                </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="grupos">
+    <h3>Grupo E</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Seleção</th>
+                <th scope="col">Pts</th>
+                <th scope="col">PJ</th>
+                <th scope="col">V</th>
+                <th scope="col">E</th>
+                <th scope="col">D</th>
+                <th scope="col">GP</th>
+                <th scope="col">GC</th>
+                <th scope="col">SG</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="grupoE">
+            <tr *ngFor="let selecao of grupoE; index as i">
+                    <th>{{selecao.nome}}</th>
+                    <th>{{selecao.pontos}}</th>
+                    <th>{{selecao.partidas}}</th>
+                    <th>{{selecao.vitorias}}</th>
+                    <th>{{selecao.empates}}</th>
+                    <th>{{selecao.derrotas}}</th>
+                    <th>{{selecao.golspro}}</th>
+                    <th>{{selecao.golscontra}}</th>
+                    <th>{{selecao.saldogols}}</th>
+                </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="grupos">
+    <h3>Grupo F</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Seleção</th>
+                <th scope="col">Pts</th>
+                <th scope="col">PJ</th>
+                <th scope="col">V</th>
+                <th scope="col">E</th>
+                <th scope="col">D</th>
+                <th scope="col">GP</th>
+                <th scope="col">GC</th>
+                <th scope="col">SG</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="grupoF">
+            <tr *ngFor="let selecao of grupoF; index as i">
+                    <th>{{selecao.nome}}</th>
+                    <th>{{selecao.pontos}}</th>
+                    <th>{{selecao.partidas}}</th>
+                    <th>{{selecao.vitorias}}</th>
+                    <th>{{selecao.empates}}</th>
+                    <th>{{selecao.derrotas}}</th>
+                    <th>{{selecao.golspro}}</th>
+                    <th>{{selecao.golscontra}}</th>
+                    <th>{{selecao.saldogols}}</th>
+                </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="grupos">
+    <h3>Grupo G</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Seleção</th>
+                <th scope="col">Pts</th>
+                <th scope="col">PJ</th>
+                <th scope="col">V</th>
+                <th scope="col">E</th>
+                <th scope="col">D</th>
+                <th scope="col">GP</th>
+                <th scope="col">GC</th>
+                <th scope="col">SG</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="grupoG">
+            <tr *ngFor="let selecao of grupoG; index as i">
+                    <th>{{selecao.nome}}</th>
+                    <th>{{selecao.pontos}}</th>
+                    <th>{{selecao.partidas}}</th>
+                    <th>{{selecao.vitorias}}</th>
+                    <th>{{selecao.empates}}</th>
+                    <th>{{selecao.derrotas}}</th>
+                    <th>{{selecao.golspro}}</th>
+                    <th>{{selecao.golscontra}}</th>
+                    <th>{{selecao.saldogols}}</th>
+                </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="grupos">
+    <h3>Grupo H</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Seleção</th>
+                <th scope="col">Pts</th>
+                <th scope="col">PJ</th>
+                <th scope="col">V</th>
+                <th scope="col">E</th>
+                <th scope="col">D</th>
+                <th scope="col">GP</th>
+                <th scope="col">GC</th>
+                <th scope="col">SG</th>
+            </tr>
+        </thead>
+        <tbody *ngIf="grupoH">
+            <tr *ngFor="let selecao of grupoH; index as i">
                     <th>{{selecao.nome}}</th>
                     <th>{{selecao.pontos}}</th>
                     <th>{{selecao.partidas}}</th>
