--- a/src/app/rodada/rodada2/rodada2.component.html
+++ b/src/app/rodada/rodada2/rodada2.component.html
@@ -1,1 +1,251 @@
-<p>rodada2 works!</p>
+<!-- Grupo A -->
+<div *ngIf="grupoA">
+    <h3>Grupo A</h3>
+    <hr>
+    <label class="col-4 text-center" 
+            for="">{{grupoA[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoA[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoA[2].g1"
+           type="text">
+    <label  class="col-4 text-center" 
+            for="">{{grupoA[2].nome}}</label>
+    <br>
+    <label class="col-4 text-center" 
+           for="">{{grupoA[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoA[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoA[3].g1"
+           type="text">
+    <label class="col-4 text-center" 
+           for="">{{grupoA[3].nome}}</label>
+    <hr>
+</div>
+
+<!-- Grupo B -->
+<div *ngIf="grupoB">
+    <h3>Grupo B</h3>
+    <hr>
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoB[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoB[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoB[2].g1"
+           type="text">
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoB[2].nome}}</label>
+    <br>
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoB[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoB[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoB[3].g1"
+           type="text">
+    <label 
+           class="col-4 text-center" 
+           for="">{{grupoB[3].nome}}</label>
+    <hr>
+</div>
+
+<!-- Grupo C -->
+<div *ngIf="grupoC">
+    <h3>Grupo C</h3>
+    <hr>
+    <label 
+            class="col-4 text-center" 
+            for="">{{grupoC[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoC[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoC[2].g1"
+           type="text">
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoC[2].nome}}</label>
+    <br>
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoC[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoC[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoC[3].g1"
+           type="text">
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoC[3].nome}}</label>
+    <hr>
+</div>
+
+<!-- Grupo D -->
+<div *ngIf="grupoD">
+    <h3>Grupo D</h3>
+    <hr>
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoD[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoD[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoD[2].g1"
+           type="text">
+    <label 
+            class="col-4 text-center" 
+            for="">{{grupoD[2].nome}}</label>
+    <br>
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoD[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoD[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoD[3].g1"
+           type="text">
+    <label 
+           class="col-4 text-center" 
+           for="">{{grupoD[3].nome}}</label>
+    <hr>
+</div>
+
+<!-- Grupo E -->
+<div *ngIf="grupoE">
+    <h3>Grupo E</h3>
+    <hr>
+    <label 
+            class="col-4 text-center" 
+            for="">{{grupoE[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoE[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoE[2].g1"
+           type="text">
+    <label 
+            class="col-4 text-center" 
+            for="">{{grupoE[2].nome}}</label>
+    <br>
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoE[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoE[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoE[3].g1"
+           type="text">
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoE[3].nome}}</label>
+    <hr>
+</div>
+
+<!-- Grupo F -->
+<div *ngIf="grupoF">
+    <h3>Grupo F</h3>
+    <hr>
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoF[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoF[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoF[2].g1"
+           type="text">
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoF[2].nome}}</label>
+    <br>
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoF[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoF[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoF[3].g1"
+           type="text">
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoF[3].nome}}</label>
+    <hr>
+</div>
+
+<!-- Grupo G -->
+<div *ngIf="grupoG">
+    <h3>Grupo G</h3>
+    <hr>
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoG[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoG[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoG[2].g1"
+           type="text">
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoG[2].nome}}</label>
+    <br>
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoG[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoG[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoG[3].g1"
+           type="text">
+    <label 
+           class="col-4 text-center" 
+           for="">{{grupoG[3].nome}}</label>
+    <hr>
+</div>
+
+<!-- Grupo H -->
+<div *ngIf="grupoH">
+    <h3>Grupo H</h3>
+    <hr>
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoH[0].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoH[0].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoH[2].g1"
+           type="text">
+    <label  
+            class="col-4 text-center" 
+            for="">{{grupoH[2].nome}}</label>
+    <br>
+    <label 
+           class="col-4 text-center" 
+           for="">{{grupoH[1].nome}}</label>
+    <input class="col-1" 
+           [(ngModel)]="grupoH[1].g1"
+           type="text"> x
+    <input class="col-1" 
+           [(ngModel)]="grupoH[3].g1"
+           type="text">
+    <label  
+           class="col-4 text-center" 
+           for="">{{grupoH[3].nome}}</label>
+    <hr>
+</div>
