--- a/src/app/rodada/rodada.component.html
+++ b/src/app/rodada/rodada.component.html
@@ -1,9 +1,9 @@
 <aside>
     <h6>{{mostraRodada()}}</h6>
-    <button [hidden]="rodada1" (click)="visualizarRodadaAnterior()" type="input" class="btn-primary"> Rodada
-        Anterior</button>
-    <button [hidden]="rodada3" (click)="visualizarProximaRodada()" type="input" class="btn-primary"> Próxima
-        Rodada</button>
+    <button [disabled]="rodada1" (click)="visualizarRodadaAnterior()" type="input" class="col-2 btn btn-primary">
+        << </button>
+    <button [disabled]="rodada3" (click)="visualizarProximaRodada()" type="input" class="col-2 btn btn-primary"> >>
+        </button>
     <hr>
     <div *ngIf="rodada1">
         <app-rodada1></app-rodada1>
