--- a/src/app/rodada/rodada1/rodada1.component.html
+++ b/src/app/rodada/rodada1/rodada1.component.html
@@ -8,24 +8,31 @@
     <input class="col-1" 
            [(ngModel)]="grupoA[0].g1"
            (change)="mudaResultado(grupoA[0],grupoA[1],1)"
-           type="text"> x
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[1].g1"
            (change)="mudaResultado(grupoA[0],grupoA[1],1)"
-           type="text">
+           type="number"
+           min="0">
     <label *ngIf="grupoA[1]" 
             class="col-4 text-center" 
             for="">{{grupoA[1].nome}}</label>
     <br>
+
     <label *ngIf="grupoA[2]" 
            class="col-4 text-center" 
            for="">{{grupoA[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoA[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoA[2],grupoA[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoA[2],grupoA[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoA[3]" 
            class="col-4 text-center" 
            for="">{{grupoA[3].nome}}</label>
@@ -41,10 +48,14 @@
             for="">{{grupoB[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoB[0].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoB[0],grupoB[1],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[1].g1"
-           type="text">
+           (change)="mudaResultado(grupoB[0],grupoB[1],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoB[1]" 
             class="col-4 text-center" 
             for="">{{grupoB[1].nome}}</label>
@@ -54,10 +65,14 @@
            for="">{{grupoB[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoB[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoB[2],grupoB[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoB[2],grupoB[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoB[3]" 
            class="col-4 text-center" 
            for="">{{grupoB[3].nome}}</label>
@@ -73,10 +88,14 @@
             for="">{{grupoC[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoC[0].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoC[0],grupoC[1],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[1].g1"
-           type="text">
+           (change)="mudaResultado(grupoC[0],grupoC[1],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoC[1]" 
             class="col-4 text-center" 
             for="">{{grupoC[1].nome}}</label>
@@ -86,10 +105,14 @@
            for="">{{grupoC[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoC[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoC[2],grupoC[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoC[2],grupoC[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoC[3]" 
            class="col-4 text-center" 
            for="">{{grupoC[3].nome}}</label>
@@ -105,10 +128,14 @@
             for="">{{grupoD[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoD[0].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoD[0],grupoD[1],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[1].g1"
-           type="text">
+           (change)="mudaResultado(grupoD[0],grupoD[1],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoD[1]" 
             class="col-4 text-center" 
             for="">{{grupoD[1].nome}}</label>
@@ -118,10 +145,14 @@
            for="">{{grupoD[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoD[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoD[2],grupoD[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoD[2],grupoD[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoD[3]" 
            class="col-4 text-center" 
            for="">{{grupoD[3].nome}}</label>
@@ -137,10 +168,14 @@
             for="">{{grupoE[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoE[0].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoE[0],grupoE[1],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[1].g1"
-           type="text">
+           (change)="mudaResultado(grupoE[0],grupoE[1],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoE[1]" 
             class="col-4 text-center" 
             for="">{{grupoE[1].nome}}</label>
@@ -150,10 +185,14 @@
            for="">{{grupoE[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoE[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoE[2],grupoE[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoE[2],grupoE[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoE[3]" 
            class="col-4 text-center" 
            for="">{{grupoE[3].nome}}</label>
@@ -169,10 +208,14 @@
             for="">{{grupoF[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoF[0].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoF[0],grupoF[1],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[1].g1"
-           type="text">
+           (change)="mudaResultado(grupoF[0],grupoF[1],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoF[1]" 
             class="col-4 text-center" 
             for="">{{grupoF[1].nome}}</label>
@@ -182,10 +225,14 @@
            for="">{{grupoF[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoF[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoF[2],grupoF[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoF[2],grupoF[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoF[3]" 
            class="col-4 text-center" 
            for="">{{grupoF[3].nome}}</label>
@@ -201,10 +248,14 @@
             for="">{{grupoG[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoG[0].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoG[0],grupoG[1],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[1].g1"
-           type="text">
+           (change)="mudaResultado(grupoG[0],grupoG[1],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoG[1]" 
             class="col-4 text-center" 
             for="">{{grupoG[1].nome}}</label>
@@ -214,10 +265,14 @@
            for="">{{grupoG[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoG[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoG[2],grupoG[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoG[2],grupoG[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoG[3]" 
            class="col-4 text-center" 
            for="">{{grupoG[3].nome}}</label>
@@ -233,10 +288,14 @@
             for="">{{grupoH[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoH[0].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoH[0],grupoH[1],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[1].g1"
-           type="text">
+           (change)="mudaResultado(grupoH[0],grupoH[1],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoH[1]" 
             class="col-4 text-center" 
             for="">{{grupoH[1].nome}}</label>
@@ -246,10 +305,14 @@
            for="">{{grupoH[2].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoH[2].g1"
-           type="text"> x
+           (change)="mudaResultado(grupoH[2],grupoH[3],1)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[3].g1"
-           type="text">
+           (change)="mudaResultado(grupoH[2],grupoH[3],1)"
+           type="number"
+           min="0">
     <label *ngIf="grupoH[3]" 
            class="col-4 text-center" 
            for="">{{grupoH[3].nome}}</label>
