--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row">
+    <div class="tabela-head">
+      <h1>Bolão Copa Qatar 2022</h1>
+    </div>
     <div class="col-6">
-      <h3>Tabela Copa do Mundo 2022</h3>
+      
       <app-tabela></app-tabela>
     </div>
     <div class="col-6">
-      <h3>Rodadas</h3>
       <app-rodada></app-rodada>
     </div>
   </div>
