--- a/src/app/rodada/rodada.component.html
+++ b/src/app/rodada/rodada.component.html
@@ -1,9 +1,13 @@
 <aside>
-    <h6>{{mostraRodada()}}</h6>
-    <button [disabled]="rodada1" (click)="visualizarRodadaAnterior()" type="input" class="col-2 btn btn-primary">
-        << </button>
-    <button [disabled]="rodada3" (click)="visualizarProximaRodada()" type="input" class="col-2 btn btn-primary"> >>
-        </button>
+    <!-- <h6>{{mostraRodada()}}</h6> -->
+    <div class="rodada-nome">
+        <button [disabled]="rodada1" (click)="visualizarRodadaAnterior()" type="input" class="col-2 btn btn-primary">
+            << </button>
+            <h3>{{mostraRodada()}}</h3>
+        <button [disabled]="rodada3" (click)="visualizarProximaRodada()" type="input" class="col-2 btn btn-primary"> >>
+            </button>
+    </div>
+    
     <hr>
     <div *ngIf="rodada1">
         <app-rodada1></app-rodada1>
