Ajustando calculos da rodada 3

--- a/src/app/rodada/rodada3/rodada3.component.html
+++ b/src/app/rodada/rodada3/rodada3.component.html
@@ -6,10 +6,14 @@
             for="">{{grupoA[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoA[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoA[0],grupoA[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoA[0],grupoA[3],3)"
+           type="number"
+           min="0">
     <label  class="col-4 text-center" 
             for="">{{grupoA[3].nome}}</label>
     <br>
@@ -17,10 +21,14 @@
            for="">{{grupoA[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoA[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoA[1],grupoA[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoA[1],grupoA[2],3)"
+           type="number"
+           min="0">
     <label class="col-4 text-center" 
            for="">{{grupoA[2].nome}}</label>
     <hr>
@@ -35,10 +43,14 @@
             for="">{{grupoB[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoB[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoB[0],grupoB[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoB[0],grupoB[3],3)"
+           type="number"
+           min="0">
     <label  
             class="col-4 text-center" 
             for="">{{grupoB[3].nome}}</label>
@@ -48,10 +60,14 @@
            for="">{{grupoB[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoB[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoB[1],grupoB[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoB[1],grupoB[2],3)"
+           type="number"
+           min="0">
     <label 
            class="col-4 text-center" 
            for="">{{grupoB[2].nome}}</label>
@@ -67,10 +83,14 @@
             for="">{{grupoC[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoC[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoC[0],grupoC[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoC[0],grupoC[3],3)"
+           type="number"
+           min="0">
     <label  
             class="col-4 text-center" 
             for="">{{grupoC[3].nome}}</label>
@@ -80,10 +100,14 @@
            for="">{{grupoC[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoC[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoC[1],grupoC[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoC[1],grupoC[2],3)"
+           type="number"
+           min="0">
     <label  
            class="col-4 text-center" 
            for="">{{grupoC[2].nome}}</label>
@@ -99,10 +123,14 @@
             for="">{{grupoD[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoD[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoD[0],grupoD[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoD[0],grupoD[3],3)"
+           type="number"
+           min="0">
     <label 
             class="col-4 text-center" 
             for="">{{grupoD[3].nome}}</label>
@@ -112,10 +140,14 @@
            for="">{{grupoD[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoD[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoD[1],grupoD[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoD[1],grupoD[2],3)"
+           type="number"
+           min="0">
     <label 
            class="col-4 text-center" 
            for="">{{grupoD[2].nome}}</label>
@@ -131,10 +163,14 @@
             for="">{{grupoE[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoE[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoE[0],grupoE[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoE[0],grupoE[3],3)"
+           type="number"
+           min="0">
     <label 
             class="col-4 text-center" 
             for="">{{grupoE[3].nome}}</label>
@@ -144,10 +180,14 @@
            for="">{{grupoE[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoE[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoE[1],grupoE[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoE[1],grupoE[2],3)"
+           type="number"
+           min="0">
     <label  
            class="col-4 text-center" 
            for="">{{grupoE[2].nome}}</label>
@@ -163,10 +203,14 @@
             for="">{{grupoF[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoF[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoF[0],grupoF[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoF[0],grupoF[3],3)"
+           type="number"
+           min="0">
     <label  
             class="col-4 text-center" 
             for="">{{grupoF[3].nome}}</label>
@@ -176,10 +220,14 @@
            for="">{{grupoF[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoF[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoF[1],grupoF[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoF[1],grupoF[2],3)"
+           type="number"
+           min="0">
     <label  
            class="col-4 text-center" 
            for="">{{grupoF[2].nome}}</label>
@@ -195,10 +243,14 @@
             for="">{{grupoG[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoG[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoG[0],grupoG[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoG[0],grupoG[3],3)"
+           type="number"
+           min="0">
     <label  
             class="col-4 text-center" 
             for="">{{grupoG[3].nome}}</label>
@@ -208,10 +260,14 @@
            for="">{{grupoG[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoG[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoG[1],grupoG[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoG[1],grupoG[2],3)"
+           type="number"
+           min="0">
     <label 
            class="col-4 text-center" 
            for="">{{grupoG[2].nome}}</label>
@@ -227,10 +283,14 @@
             for="">{{grupoH[0].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoH[0].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoH[0],grupoH[3],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[3].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoH[0],grupoH[3],3)"
+           type="number"
+           min="0">
     <label  
             class="col-4 text-center" 
             for="">{{grupoH[3].nome}}</label>
@@ -240,10 +300,14 @@
            for="">{{grupoH[1].nome}}</label>
     <input class="col-1" 
            [(ngModel)]="grupoH[1].g3"
-           type="text"> x
+           (change)="mudaResultadoR3(grupoH[1],grupoH[2],3)"
+           type="number"
+           min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[2].g3"
-           type="text">
+           (change)="mudaResultadoR3(grupoH[1],grupoH[2],3)"
+           type="number"
+           min="0">
     <label  
            class="col-4 text-center" 
            for="">{{grupoH[2].nome}}</label>
