Alterando os inputs das rodadas

--- a/src/app/rodada/rodada1/rodada1.component.html
+++ b/src/app/rodada/rodada1/rodada1.component.html
@@ -6,12 +6,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoA[0].g1"
            (change)="mudaResultado(grupoA[0],grupoA[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[1].g1"
            (change)="mudaResultado(grupoA[0],grupoA[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoA[1]" 
             class="col-4 text-center" 
@@ -24,12 +24,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoA[2].g1"
            (change)="mudaResultado(grupoA[2],grupoA[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoA[3].g1"
            (change)="mudaResultado(grupoA[2],grupoA[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoA[3]" 
            class="col-4 text-center" 
@@ -47,12 +47,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoB[0].g1"
            (change)="mudaResultado(grupoB[0],grupoB[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[1].g1"
            (change)="mudaResultado(grupoB[0],grupoB[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoB[1]" 
             class="col-4 text-center" 
@@ -64,12 +64,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoB[2].g1"
            (change)="mudaResultado(grupoB[2],grupoB[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoB[3].g1"
            (change)="mudaResultado(grupoB[2],grupoB[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoB[3]" 
            class="col-4 text-center" 
@@ -87,12 +87,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoC[0].g1"
            (change)="mudaResultado(grupoC[0],grupoC[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[1].g1"
            (change)="mudaResultado(grupoC[0],grupoC[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoC[1]" 
             class="col-4 text-center" 
@@ -104,12 +104,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoC[2].g1"
            (change)="mudaResultado(grupoC[2],grupoC[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoC[3].g1"
            (change)="mudaResultado(grupoC[2],grupoC[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoC[3]" 
            class="col-4 text-center" 
@@ -127,12 +127,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoD[0].g1"
            (change)="mudaResultado(grupoD[0],grupoD[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[1].g1"
            (change)="mudaResultado(grupoD[0],grupoD[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoD[1]" 
             class="col-4 text-center" 
@@ -144,12 +144,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoD[2].g1"
            (change)="mudaResultado(grupoD[2],grupoD[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoD[3].g1"
            (change)="mudaResultado(grupoD[2],grupoD[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoD[3]" 
            class="col-4 text-center" 
@@ -167,12 +167,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoE[0].g1"
            (change)="mudaResultado(grupoE[0],grupoE[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[1].g1"
            (change)="mudaResultado(grupoE[0],grupoE[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoE[1]" 
             class="col-4 text-center" 
@@ -184,12 +184,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoE[2].g1"
            (change)="mudaResultado(grupoE[2],grupoE[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoE[3].g1"
            (change)="mudaResultado(grupoE[2],grupoE[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoE[3]" 
            class="col-4 text-center" 
@@ -207,12 +207,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoF[0].g1"
            (change)="mudaResultado(grupoF[0],grupoF[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[1].g1"
            (change)="mudaResultado(grupoF[0],grupoF[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoF[1]" 
             class="col-4 text-center" 
@@ -224,12 +224,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoF[2].g1"
            (change)="mudaResultado(grupoF[2],grupoF[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoF[3].g1"
            (change)="mudaResultado(grupoF[2],grupoF[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoF[3]" 
            class="col-4 text-center" 
@@ -247,12 +247,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoG[0].g1"
            (change)="mudaResultado(grupoG[0],grupoG[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[1].g1"
            (change)="mudaResultado(grupoG[0],grupoG[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoG[1]" 
             class="col-4 text-center" 
@@ -264,12 +264,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoG[2].g1"
            (change)="mudaResultado(grupoG[2],grupoG[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoG[3].g1"
            (change)="mudaResultado(grupoG[2],grupoG[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoG[3]" 
            class="col-4 text-center" 
@@ -287,12 +287,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoH[0].g1"
            (change)="mudaResultado(grupoH[0],grupoH[1],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[1].g1"
            (change)="mudaResultado(grupoH[0],grupoH[1],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoH[1]" 
             class="col-4 text-center" 
@@ -304,12 +304,12 @@
     <input class="col-1" 
            [(ngModel)]="grupoH[2].g1"
            (change)="mudaResultado(grupoH[2],grupoH[3],1)"
-           type="number"
+           type="text"
            min="0"> x
     <input class="col-1" 
            [(ngModel)]="grupoH[3].g1"
            (change)="mudaResultado(grupoH[2],grupoH[3],1)"
-           type="number"
+           type="text"
            min="0">
     <label *ngIf="grupoH[3]" 
            class="col-4 text-center" 
