--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,3 +6,13 @@
     background-color: #d3a02c;
     color: #fff;
 }
+
+.faseDeGrupos_botoes{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #ececec;
+}
