--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,12 @@
     <div class="tabela-head">
       <h1>Bolão Copa Qatar 2022</h1>
     </div>
+    <div class="col-12 faseDeGrupos_botoes">
+      <button [disabled]="">E</button>
+      <h2>Fase de grupos</h2>
+      <!-- {{mostraRodada()}} -->
+      <button [disabled]="">D</button>
+    </div>
     <div class="col-8">
       
       <app-tabela></app-tabela>
