--- a/src/app/rodada/rodada1/rodada1.component.html
+++ b/src/app/rodada/rodada1/rodada1.component.html
@@ -1,4 +1,4 @@
-<div class="rodada-grupos">
+<div class="">
    <!-- Grupo A -->
    <div *ngIf="grupoA" class="grupos-rodadas">
        <label *ngIf="grupoA" 
