--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
       <h1>Bolão Copa Qatar 2022</h1>
     </div>
     <div class="col-12 faseDeGrupos_botoes">
-      <button [disabled]="">E</button>
+      <button [disabled]="">LEFT</button>
       <h2>Fase de grupos</h2>
       <!-- {{mostraRodada()}} -->
-      <button [disabled]="">D</button>
+      <button [disabled]="">Right</button>
     </div>
     <div class="col-8">
       
